--- a/css/screen.css
+++ b/css/screen.css
@@ -443,34 +443,35 @@ body {
 p, ol, ul {
   font-size: 19px;
   line-height: 27px;
+  margin: 0 0 27px 0;
 }
 
-/* line 23, ../sass/screen.scss */
+/* line 24, ../sass/screen.scss */
 .container {
   max-width: 640px;
   margin: 0 auto;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 29, ../sass/screen.scss */
 section {
   overflow: auto;
   padding: 60px 0 80px;
 }
 
-/* line 33, ../sass/screen.scss */
+/* line 34, ../sass/screen.scss */
 img {
   max-width: 100%;
   height: auto;
 }
 
-/* line 38, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 h2 {
   font-size: 3em;
   font-weight: normal;
   margin-top: 0;
 }
 
-/* line 44, ../sass/screen.scss */
+/* line 45, ../sass/screen.scss */
 #masthead {
   background: white;
   position: fixed;
@@ -485,27 +486,27 @@ h2 {
   -moz-box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.05);
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.05);
 }
-/* line 56, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 #masthead ul, #masthead li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 62, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 #masthead li {
   display: inline-block;
 }
-/* line 65, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 #masthead li.selected a {
   color: #fe916b;
 }
-/* line 70, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 #masthead img {
   vertical-align: middle;
   top: -2px;
   position: relative;
 }
-/* line 76, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 #masthead a {
   display: block;
   padding: 18px 24px;
@@ -516,21 +517,21 @@ h2 {
   text-transform: uppercase;
   position: relative;
 }
-/* line 86, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 #masthead a:hover {
   top: -1px;
 }
-/* line 90, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 #masthead a:active {
   top: 0;
 }
 
-/* line 96, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 #announcement {
   text-align: center;
   padding-top: 100px;
 }
-/* line 100, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 #announcement h4 {
   display: inline-block;
   padding: 4px 16px;
@@ -543,41 +544,41 @@ h2 {
   position: relative;
   overflow: visible;
 }
-/* line 112, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 #announcement h4:before {
   content: "";
   position: absolute;
-  background-image: url('/images/gray-banner-left.png?1374023641');
+  background-image: url('/images/gray-banner-left.png?1374084944');
   left: -21px;
   bottom: -4px;
   height: 24px;
   width: 29px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 112, ../sass/screen.scss */
+  /* line 113, ../sass/screen.scss */
   #announcement h4:before {
     background-size: 29px 24px;
-    background-image: url('/images/gray-banner-left@2x.png?1374023641');
+    background-image: url('/images/gray-banner-left@2x.png?1374084944');
   }
 }
-/* line 129, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 #announcement h4:after {
   content: "";
   position: absolute;
-  background-image: url('/images/gray-banner-right.png?1374023641');
+  background-image: url('/images/gray-banner-right.png?1374084944');
   right: -21px;
   bottom: -4px;
   height: 24px;
   width: 29px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 129, ../sass/screen.scss */
+  /* line 130, ../sass/screen.scss */
   #announcement h4:after {
     background-size: 29px 24px;
-    background-image: url('/images/gray-banner-right@2x.png?1374023641');
+    background-image: url('/images/gray-banner-right@2x.png?1374084944');
   }
 }
-/* line 147, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 #announcement h1 {
   font-size: 6em;
   padding: 0;
@@ -585,11 +586,11 @@ h2 {
   color: #89c93d;
   font-weight: normal;
 }
-/* line 154, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 #announcement h1 span {
   color: #fe916b;
 }
-/* line 159, ../sass/screen.scss */
+/* line 160, ../sass/screen.scss */
 #announcement h2 {
   font-size: 20px;
   margin-bottom: 2em;
@@ -597,16 +598,16 @@ h2 {
   font-style: italic;
   font-weight: normal;
 }
-/* line 167, ../sass/screen.scss */
+/* line 168, ../sass/screen.scss */
 #announcement .info {
   text-align: center;
 }
-/* line 171, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 #announcement .btn {
   display: block;
   padding: 14px 0;
   width: 100%;
-  background-color: #d4de1b;
+  background-color: #fe916b;
   margin-bottom: 10px;
   font-size: 20px;
   color: #fff;
@@ -618,91 +619,110 @@ h2 {
   border-radius: 4px;
 }
 
-/* line 184, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 #story {
   text-align: center;
-  background: #f9f7c6 url('/images/jim.jamie.yellow.png?1374023641') no-repeat center -1px;
+  background: white url('/images/jim_jamie_story_bg.jpg?1374084944') no-repeat center -1px;
   background-size: 100% auto;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 184, ../sass/screen.scss */
+  /* line 185, ../sass/screen.scss */
   #story {
     background-size: 100% auto;
-    background-image: url('/images/jim.jamie.yellow@2x.png?1374023641');
+    background-image: url('/images/jim_jamie_story_bg@2x.jpg?1374084944');
   }
 }
-/* line 196, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 #story .flourish {
-  margin: 0 auto;
+  margin: 0 auto 40px;
 }
-/* line 200, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 #story h2 {
   color: #89c93d;
+  margin-bottom: .25em;
 }
-/* line 204, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 #story p {
   text-align: left;
 }
-
 /* line 210, ../sass/screen.scss */
+#story .storytext {
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  -ms-column-count: 2;
+  -o-column-count: 2;
+  column-count: 2;
+}
+
+/* line 216, ../sass/screen.scss */
 #party {
   background: #fe916b;
   text-align: center;
 }
-/* line 214, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
 #party h2 {
   color: #f9f7c6;
 }
-/* line 218, ../sass/screen.scss */
+/* line 224, ../sass/screen.scss */
 #party h3 {
   margin-top: 0;
   margin-bottom: 2em;
   font-weight: normal;
 }
-/* line 224, ../sass/screen.scss */
+/* line 230, ../sass/screen.scss */
 #party .span_2 img {
   border: 10px solid #fff;
   margin-bottom: 10px;
 }
 
-/* line 231, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 #ceremony {
   background: #f9f7c6;
   text-align: center;
 }
-/* line 235, ../sass/screen.scss */
+/* line 241, ../sass/screen.scss */
 #ceremony h2 {
   color: #fe916b;
+  margin-bottom: .25em;
 }
-/* line 239, ../sass/screen.scss */
+/* line 246, ../sass/screen.scss */
+#ceremony .flourish {
+  margin-bottom: 40px;
+}
+/* line 250, ../sass/screen.scss */
+#ceremony img {
+  margin-bottom: 27px;
+}
+/* line 254, ../sass/screen.scss */
 #ceremony p {
   text-align: left;
 }
 
-/* line 244, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 #registry {
   background: #fcfce6;
   padding: 80px 0 0;
 }
-/* line 248, ../sass/screen.scss */
+/* line 263, ../sass/screen.scss */
 #registry h2 {
-  margin: .25em 0;
+  margin: 0 0 .25em;
+  color: #89c93d;
 }
-/* line 252, ../sass/screen.scss */
+/* line 268, ../sass/screen.scss */
 #registry p {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
 }
-/* line 257, ../sass/screen.scss */
+/* line 273, ../sass/screen.scss */
 #registry .flourish {
   margin: 20px 0 30px;
 }
-/* line 261, ../sass/screen.scss */
+/* line 277, ../sass/screen.scss */
 #registry .row {
   text-align: center;
   overflow: auto;
 }
-/* line 266, ../sass/screen.scss */
+/* line 282, ../sass/screen.scss */
 #registry #gifts {
   clear: both;
   padding-top: 30px;
