--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -238,6 +238,23 @@ h2{
 	background: $quaternaryColor;
 	text-align: center;
 
+	#map-holder{
+		position: relative;
+		width: 100%;
+		padding-top: 62.5%;
+		margin-bottom: $baseLineHeight;
+	}
+
+	#map-canvas{
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
+	}
+
 	h2{
 		color: $primaryColor;
 		margin-bottom: .25em;
@@ -245,10 +262,6 @@ h2{
 
 	.flourish{
 		margin-bottom: 40px;
-	}
-
-	img{
-		margin-bottom: $baseLineHeight;
 	}
 
 	p{
