--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -5,11 +5,11 @@ $secondaryFont:"Open Sans",sans-serif;
 
 $siteWidth: 640px;
 
-$baseFontSize: 19px;
-$baseLineHeight: 27px;
+$baseFontSize: 110%;
+$baseLineHeight: 1.5;
 
-$primaryColor: #fe916b;
-$secondaryColor: #89c93d;
-$tertiaryColor: #e3eb5b;
-$quaternaryColor: #f9f7c6;
-$quinaryColor: #fff;
+$primaryColor: #f94893;
+$secondaryColor: #2f3850;
+$tertiaryColor: #cecece;
+$quaternaryColor: #fff;
+$quinaryColor: #9b69b8;
