--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Open+Sans:700");
-/* line 55, ../sass/_normalize.scss */
+/* line 45, ../sass/_normalize.scss */
 article,
 aside,
 details,
@@ -14,7 +14,7 @@ summary {
   display: block;
 }
 
-/* line 63, ../sass/_normalize.scss */
+/* line 61, ../sass/_normalize.scss */
 audio,
 canvas,
 video {
@@ -43,7 +43,7 @@ html {
   -ms-text-size-adjust: 100%;
 }
 
-/* line 110, ../sass/_normalize.scss */
+/* line 106, ../sass/_normalize.scss */
 html,
 button,
 input,
@@ -61,7 +61,7 @@ body {
 a:focus {
   outline: thin dotted;
 }
-/* line 139, ../sass/_normalize.scss */
+/* line 138, ../sass/_normalize.scss */
 a:hover, a:active {
   outline: 0;
 }
@@ -107,7 +107,7 @@ abbr[title] {
   border-bottom: 1px dotted;
 }
 
-/* line 192, ../sass/_normalize.scss */
+/* line 191, ../sass/_normalize.scss */
 b,
 strong {
   font-weight: bold;
@@ -129,13 +129,13 @@ mark {
   color: #000;
 }
 
-/* line 218, ../sass/_normalize.scss */
+/* line 217, ../sass/_normalize.scss */
 p,
 pre {
   margin: 1em 0;
 }
 
-/* line 229, ../sass/_normalize.scss */
+/* line 226, ../sass/_normalize.scss */
 code,
 kbd,
 pre,
@@ -162,7 +162,7 @@ q {
   quotes: none;
 }
 
-/* line 263, ../sass/_normalize.scss */
+/* line 262, ../sass/_normalize.scss */
 q:before,
 q:after {
   content: '';
@@ -174,7 +174,7 @@ small {
   font-size: 80%;
 }
 
-/* line 278, ../sass/_normalize.scss */
+/* line 277, ../sass/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -193,7 +193,7 @@ sub {
   bottom: -0.25em;
 }
 
-/* line 302, ../sass/_normalize.scss */
+/* line 299, ../sass/_normalize.scss */
 dl,
 menu,
 ol,
@@ -206,14 +206,14 @@ dd {
   margin: 0 0 0 40px;
 }
 
-/* line 317, ../sass/_normalize.scss */
+/* line 315, ../sass/_normalize.scss */
 menu,
 ol,
 ul {
   padding: 0 0 0 40px;
 }
 
-/* line 326, ../sass/_normalize.scss */
+/* line 325, ../sass/_normalize.scss */
 nav ul,
 nav ol {
   list-style-image: none;
@@ -255,7 +255,7 @@ legend {
   *margin-left: -7px;
 }
 
-/* line 405, ../sass/_normalize.scss */
+/* line 402, ../sass/_normalize.scss */
 button,
 input,
 select,
@@ -267,19 +267,19 @@ textarea {
   *vertical-align: middle;
 }
 
-/* line 418, ../sass/_normalize.scss */
+/* line 417, ../sass/_normalize.scss */
 button,
 input {
   line-height: normal;
 }
 
-/* line 428, ../sass/_normalize.scss */
+/* line 427, ../sass/_normalize.scss */
 button,
 select {
   text-transform: none;
 }
 
-/* line 443, ../sass/_normalize.scss */
+/* line 440, ../sass/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -289,13 +289,13 @@ input[type="submit"] {
   *overflow: visible;
 }
 
-/* line 454, ../sass/_normalize.scss */
+/* line 453, ../sass/_normalize.scss */
 button[disabled],
 input[disabled] {
   cursor: default;
 }
 
-/* line 464, ../sass/_normalize.scss */
+/* line 463, ../sass/_normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
@@ -312,7 +312,7 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-/* line 487, ../sass/_normalize.scss */
+/* line 486, ../sass/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -343,18 +343,13 @@ table {
  * Created by @erskinedesign
  */
 /* Reusable column setup */
-/* line 21, ../sass/_grid.scss */
-.col {
-  border: 0px solid rgba(0, 0, 0, 0);
-  float: left;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-background-clip: padding-box !important;
-  -webkit-background-clip: padding-box !important;
-  background-clip: padding-box !important;
+@media screen and (max-width: 640px) {
+  /* line 22, ../sass/_grid.scss */
+  .col {
+    margin-left: 3%;
+    margin-right: 3%;
+  }
 }
-
     /* 1. 6 Column Grid 0px - Infinity
     -----------------------------------------------------------------------------
 
@@ -366,20 +361,28 @@ table {
     Span 6:    100%
 
     ----------------------------------------------------------------------------- */
-@media screen and (min-width: 0px) {
-  /* line 52, ../sass/_grid.scss */
+@media screen and (min-width: 641px) {
+  /* line 55, ../sass/_grid.scss */
   .col {
+    border: 0px solid rgba(0, 0, 0, 0);
+    float: left;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-background-clip: padding-box !important;
+    -webkit-background-clip: padding-box !important;
+    background-clip: padding-box !important;
     margin-left: 2%;
     padding: 0 1.5%;
   }
 
   /* --- Gridpak variables ---*/
-  /* line 65, ../sass/_grid.scss */
+  /* line 69, ../sass/_grid.scss */
   .row .col:first-child {
     margin-left: 0;
   }
 
-  /* line 69, ../sass/_grid.scss */
+  /* line 73, ../sass/_grid.scss */
   .span_1 {
     width: 15%;
     border-left-width: 0;
@@ -387,7 +390,7 @@ table {
     margin-left: 2%;
   }
 
-  /* line 72, ../sass/_grid.scss */
+  /* line 76, ../sass/_grid.scss */
   .span_2 {
     width: 32%;
     border-left-width: 0;
@@ -395,7 +398,7 @@ table {
     margin-left: 2%;
   }
 
-  /* line 75, ../sass/_grid.scss */
+  /* line 79, ../sass/_grid.scss */
   .span_3 {
     width: 49%;
     border-left-width: 0;
@@ -403,7 +406,7 @@ table {
     margin-left: 2%;
   }
 
-  /* line 78, ../sass/_grid.scss */
+  /* line 82, ../sass/_grid.scss */
   .span_4 {
     width: 66%;
     border-left-width: 0;
@@ -411,7 +414,7 @@ table {
     margin-left: 2%;
   }
 
-  /* line 81, ../sass/_grid.scss */
+  /* line 85, ../sass/_grid.scss */
   .span_5 {
     width: 83%;
     border-left-width: 0;
@@ -419,13 +422,20 @@ table {
     margin-left: 2%;
   }
 
-  /* line 84, ../sass/_grid.scss */
+  /* line 88, ../sass/_grid.scss */
   .span_6 {
     margin-left: 0;
     width: 100%;
   }
 }
 /* line 7, ../sass/screen.scss */
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 14, ../sass/screen.scss */
 html,
 body {
   padding: 0;
@@ -434,44 +444,48 @@ body {
   color: #535353;
 }
 
-/* line 14, ../sass/screen.scss */
+/* line 22, ../sass/screen.scss */
 body {
-  background: #f9f7c6;
+  background: white;
 }
 
-/* line 18, ../sass/screen.scss */
+/* line 26, ../sass/screen.scss */
 p, ol, ul {
-  font-size: 19px;
-  line-height: 27px;
-  margin: 0 0 27px 0;
+  font-size: 110%;
+  line-height: 1.5;
+  margin: 0 0 1.5 0;
 }
 
-/* line 24, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 .container {
   max-width: 640px;
   margin: 0 auto;
 }
 
-/* line 29, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 section {
   overflow: auto;
   padding: 60px 0 80px;
 }
 
-/* line 34, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 img {
   max-width: 100%;
   height: auto;
 }
 
-/* line 39, ../sass/screen.scss */
-h2 {
-  font-size: 3em;
-  font-weight: normal;
+/* line 47, ../sass/screen.scss */
+h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
-/* line 45, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
+h2 {
+  font-size: 3em;
+  font-weight: normal;
+}
+
+/* line 56, ../sass/screen.scss */
 #masthead {
   background: white;
   position: fixed;
@@ -486,65 +500,89 @@ h2 {
   -moz-box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.05);
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.05);
 }
-/* line 57, ../sass/screen.scss */
+@media screen and (max-width: 768px) {
+  /* line 56, ../sass/screen.scss */
+  #masthead {
+    display: none;
+  }
+}
+/* line 72, ../sass/screen.scss */
 #masthead ul, #masthead li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 63, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 #masthead li {
   display: inline-block;
 }
-/* line 66, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 #masthead li.selected a {
-  color: #fe916b;
+  color: #f94893;
 }
-/* line 71, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 #masthead img {
   vertical-align: middle;
   top: -2px;
   position: relative;
 }
-/* line 77, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 #masthead a {
   display: block;
-  padding: 18px 24px;
+  padding: 1.5em 1em;
   text-decoration: none;
-  font-size: 12px;
-  font-weight: bold;
-  color: #89c93d;
+  font-size: .7em;
+  color: #2f3850;
   text-transform: uppercase;
   position: relative;
 }
-/* line 87, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 #masthead a:hover {
   top: -1px;
 }
-/* line 91, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 #masthead a:active {
   top: 0;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 #announcement {
   text-align: center;
-  padding-top: 100px;
+  padding-top: 60px;
+  position: relative;
 }
-/* line 101, ../sass/screen.scss */
+@media screen and (min-width: 768px) {
+  /* line 111, ../sass/screen.scss */
+  #announcement {
+    padding-top: 100px;
+  }
+  /* line 119, ../sass/screen.scss */
+  #announcement .container {
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 50%;
+  }
+}
+/* line 128, ../sass/screen.scss */
 #announcement h4 {
   display: inline-block;
   padding: 4px 16px;
   font-size: 12px;
   text-transform: uppercase;
-  background-color: #e3eb5b;
+  background-color: #cecece;
   font-family: "Open Sans", sans-serif;
   font-weight: normal;
-  color: #89c93d;
+  color: #2f3850;
   position: relative;
   overflow: visible;
 }
-/* line 113, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 #announcement h4:before {
   content: "";
   position: absolute;
@@ -555,13 +593,13 @@ h2 {
   width: 29px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 113, ../sass/screen.scss */
+  /* line 140, ../sass/screen.scss */
   #announcement h4:before {
     background-size: 29px 24px;
     background-image: url("../images/gray-banner-left@2x.png");
   }
 }
-/* line 130, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 #announcement h4:after {
   content: "";
   position: absolute;
@@ -572,44 +610,56 @@ h2 {
   width: 29px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 130, ../sass/screen.scss */
+  /* line 157, ../sass/screen.scss */
   #announcement h4:after {
     background-size: 29px 24px;
     background-image: url("../images/gray-banner-right@2x.png");
   }
 }
-/* line 148, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 #announcement h1 {
-  font-size: 6em;
+  font-size: 2.4em;
   padding: 0;
-  margin: 0;
-  color: #89c93d;
+  margin: 0 0 .25em;
+  color: #2f3850;
   font-weight: normal;
 }
-/* line 155, ../sass/screen.scss */
-#announcement h1 span {
-  color: #fe916b;
+@media screen and (min-width: 768px) {
+  /* line 175, ../sass/screen.scss */
+  #announcement h1 {
+    font-size: 6em;
+    margin-bottom: .25em;
+  }
 }
-/* line 160, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
+#announcement h1 span {
+  color: #f94893;
+}
+/* line 192, ../sass/screen.scss */
 #announcement h2 {
-  font-size: 20px;
+  font-size: 1em;
   margin-bottom: 2em;
-  color: #89c93d;
+  color: #2f3850;
   font-style: italic;
   font-weight: normal;
 }
-/* line 168, ../sass/screen.scss */
+@media screen and (min-width: 768px) {
+  /* line 192, ../sass/screen.scss */
+  #announcement h2 {
+    font-size: 1.6em;
+  }
+}
+/* line 204, ../sass/screen.scss */
 #announcement .info {
   text-align: center;
 }
-/* line 172, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 #announcement .btn {
-  display: block;
-  padding: 14px 0;
-  width: 100%;
-  background-color: #fe916b;
+  display: inline-block;
+  padding: .75em 1.5em;
+  background-color: #f94893;
   margin-bottom: 10px;
-  font-size: 20px;
+  font-size: 1.2em;
   color: #fff;
   text-decoration: none;
   -webkit-border-radius: 4px;
@@ -619,33 +669,151 @@ h2 {
   border-radius: 4px;
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
+#information {
+  background-image: url("../images/location.jpg");
+  background-size: cover;
+  position: relative;
+  padding: 0;
+  text-align: center;
+}
+/* line 227, ../sass/screen.scss */
+#information p {
+  color: white;
+  font-size: 1.2em;
+  text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  padding: 2em;
+}
+@media screen and (min-width: 768px) {
+  /* line 227, ../sass/screen.scss */
+  #information p {
+    font-size: 1.6em;
+    padding: 0;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 50%;
+  }
+}
+
+/* line 245, ../sass/screen.scss */
+#rsvp {
+  background-color: #2f3850;
+  text-align: center;
+  padding: 20px;
+}
+@media screen and (min-width: 420px) {
+  /* line 245, ../sass/screen.scss */
+  #rsvp {
+    padding: 60px 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  /* line 245, ../sass/screen.scss */
+  #rsvp {
+    padding: 100px 20px;
+  }
+}
+/* line 258, ../sass/screen.scss */
+#rsvp .rsvp-form {
+  margin: 0;
+  padding: 20px;
+  background-color: white;
+  display: inline-block;
+  border: 1px solid #eee;
+  -webkit-box-shadow: 0 2px 3px rgba(85, 85, 85, 0.3);
+  -moz-box-shadow: 0 2px 3px rgba(85, 85, 85, 0.3);
+  box-shadow: 0 2px 3px rgba(85, 85, 85, 0.3);
+}
+@media screen and (min-width: 758px) {
+  /* line 258, ../sass/screen.scss */
+  #rsvp .rsvp-form {
+    padding: 40px;
+  }
+}
+/* line 270, ../sass/screen.scss */
+#rsvp .rsvp-form form {
+  border: 1px solid #f94893;
+  padding: 20px;
+}
+@media screen and (min-width: 758px) {
+  /* line 270, ../sass/screen.scss */
+  #rsvp .rsvp-form form {
+    padding: 40px;
+  }
+}
+/* line 279, ../sass/screen.scss */
+#rsvp .rsvp-form .ss-form-question,
+#rsvp .rsvp-form .ss-q-title {
+  margin-bottom: .75em;
+}
+/* line 284, ../sass/screen.scss */
+#rsvp .rsvp-form input,
+#rsvp .rsvp-form select {
+  font-size: 1.2em;
+  padding: .2em;
+  border: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  width: 100%;
+}
+/* line 293, ../sass/screen.scss */
+#rsvp .rsvp-form input[type="text"],
+#rsvp .rsvp-form select {
+  background-color: #f2f2f2;
+}
+/* line 298, ../sass/screen.scss */
+#rsvp .rsvp-form input[type="submit"] {
+  background-color: #f94893;
+  padding: .7em 2em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: .85em;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  width: 100%;
+}
+/* line 310, ../sass/screen.scss */
+#rsvp iframe {
+  border: 25px solid #cecece;
+  margin: 0 auto;
+}
+
+/* line 316, ../sass/screen.scss */
 #story {
   text-align: center;
-  background: white url("../images/jim_jamie_story_bg.jpg") no-repeat center -1px;
+  background: #9b69b8 url("../images/jim_jamie_story_bg.jpg") no-repeat center -1px;
   background-size: 100% auto;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 185, ../sass/screen.scss */
+  /* line 316, ../sass/screen.scss */
   #story {
     background-size: 100% auto;
     background-image: url("../images/jim_jamie_story_bg@2x.jpg");
   }
 }
-/* line 197, ../sass/screen.scss */
+/* line 328, ../sass/screen.scss */
 #story .flourish {
   margin: 0 auto 40px;
 }
-/* line 201, ../sass/screen.scss */
+/* line 332, ../sass/screen.scss */
 #story h2 {
-  color: #89c93d;
+  color: #2f3850;
   margin-bottom: .25em;
 }
-/* line 206, ../sass/screen.scss */
+/* line 337, ../sass/screen.scss */
 #story p {
   text-align: left;
 }
-/* line 210, ../sass/screen.scss */
+/* line 341, ../sass/screen.scss */
 #story .storytext {
   -webkit-column-count: 2;
   -moz-column-count: 2;
@@ -654,41 +822,41 @@ h2 {
   column-count: 2;
 }
 
-/* line 216, ../sass/screen.scss */
+/* line 347, ../sass/screen.scss */
 #party {
-  background: #fe916b;
+  background: #f94893;
   text-align: center;
 }
-/* line 220, ../sass/screen.scss */
+/* line 351, ../sass/screen.scss */
 #party h2 {
-  color: #f9f7c6;
+  color: white;
 }
-/* line 224, ../sass/screen.scss */
+/* line 355, ../sass/screen.scss */
 #party h3 {
   margin-top: 0;
   margin-bottom: 2em;
   font-weight: normal;
 }
-/* line 230, ../sass/screen.scss */
+/* line 361, ../sass/screen.scss */
 #party .span_2 img {
   border: 10px solid #fff;
   margin-bottom: 10px;
 }
 
-/* line 237, ../sass/screen.scss */
-#ceremony {
-  background: #f9f7c6;
+/* line 368, ../sass/screen.scss */
+#directions {
+  background: white;
   text-align: center;
 }
-/* line 241, ../sass/screen.scss */
-#ceremony #map-holder {
+/* line 372, ../sass/screen.scss */
+#directions #map-holder {
   position: relative;
   width: 100%;
   padding-top: 62.5%;
-  margin-bottom: 27px;
+  margin-bottom: 1.5;
 }
-/* line 248, ../sass/screen.scss */
-#ceremony #map-canvas {
+/* line 379, ../sass/screen.scss */
+#directions #map-canvas {
   position: absolute;
   top: 0;
   left: 0;
@@ -697,45 +865,45 @@ h2 {
   width: 100%;
   height: 100%;
 }
-/* line 258, ../sass/screen.scss */
-#ceremony h2 {
-  color: #fe916b;
+/* line 389, ../sass/screen.scss */
+#directions h2 {
+  color: #f94893;
   margin-bottom: .25em;
 }
-/* line 263, ../sass/screen.scss */
-#ceremony .flourish {
+/* line 394, ../sass/screen.scss */
+#directions .flourish {
   margin-bottom: 40px;
 }
-/* line 267, ../sass/screen.scss */
-#ceremony p {
+/* line 398, ../sass/screen.scss */
+#directions p {
   text-align: left;
 }
 
-/* line 272, ../sass/screen.scss */
+/* line 403, ../sass/screen.scss */
 #registry {
-  background: #fcfce6;
+  background: white;
   padding: 80px 0 0;
 }
-/* line 276, ../sass/screen.scss */
+/* line 407, ../sass/screen.scss */
 #registry h2 {
   margin: 0 0 .25em;
-  color: #89c93d;
+  color: #2f3850;
 }
-/* line 281, ../sass/screen.scss */
+/* line 412, ../sass/screen.scss */
 #registry p {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
 }
-/* line 286, ../sass/screen.scss */
+/* line 417, ../sass/screen.scss */
 #registry .flourish {
   margin: 20px 0 30px;
 }
-/* line 290, ../sass/screen.scss */
+/* line 421, ../sass/screen.scss */
 #registry .row {
   text-align: center;
   overflow: auto;
 }
-/* line 295, ../sass/screen.scss */
+/* line 426, ../sass/screen.scss */
 #registry #gifts {
   clear: both;
   padding-top: 30px;
