--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -8,8 +8,8 @@ $siteWidth: 640px;
 $baseFontSize: 110%;
 $baseLineHeight: 1.5;
 
-$primaryColor: #f94893;
-$secondaryColor: #2f3850;
-$tertiaryColor: #cecece;
+$primaryColor: #d93c37;
+$secondaryColor: #634137;
+$tertiaryColor: #9c8539;
 $quaternaryColor: #fff;
-$quinaryColor: #9b69b8;
+$quinaryColor: #56572d;
