--- a/css/screen.css
+++ b/css/screen.css
@@ -674,52 +674,73 @@ h2 {
   background-image: url("../images/location.jpg");
   background-size: cover;
   position: relative;
-  padding: 0;
+  padding: 60px 0;
   text-align: center;
 }
 /* line 227, ../sass/screen.scss */
-#information p {
+#information img {
+  max-height: 230px;
+  margin-right: 10px;
+  display: inline-block;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+/* line 233, ../sass/screen.scss */
+#information img:last-child {
+  margin-right: 0;
+}
+/* line 238, ../sass/screen.scss */
+#information .images {
+  text-align: center;
+}
+/* line 242, ../sass/screen.scss */
+#information .content {
   color: white;
   font-size: 1.2em;
   text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-  padding: 2em;
 }
 @media screen and (min-width: 768px) {
-  /* line 227, ../sass/screen.scss */
-  #information p {
+  /* line 242, ../sass/screen.scss */
+  #information .content {
     font-size: 1.6em;
-    padding: 0;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    max-width: 50%;
   }
 }
 
-/* line 245, ../sass/screen.scss */
+/* line 253, ../sass/screen.scss */
+#photos {
+  background-color: #9c8539;
+}
+/* line 256, ../sass/screen.scss */
+#photos img {
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  border-radius: 15px;
+}
+
+/* line 261, ../sass/screen.scss */
 #rsvp {
   background-color: #634137;
   text-align: center;
   padding: 20px;
 }
 @media screen and (min-width: 420px) {
-  /* line 245, ../sass/screen.scss */
+  /* line 261, ../sass/screen.scss */
   #rsvp {
     padding: 60px 20px;
   }
 }
 @media screen and (min-width: 768px) {
-  /* line 245, ../sass/screen.scss */
+  /* line 261, ../sass/screen.scss */
   #rsvp {
     padding: 100px 20px;
   }
 }
-/* line 258, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 #rsvp .rsvp-form {
   margin: 0;
   padding: 20px;
@@ -731,29 +752,30 @@ h2 {
   box-shadow: 0 2px 3px rgba(85, 85, 85, 0.3);
 }
 @media screen and (min-width: 758px) {
-  /* line 258, ../sass/screen.scss */
+  /* line 274, ../sass/screen.scss */
   #rsvp .rsvp-form {
     padding: 40px;
   }
 }
-/* line 270, ../sass/screen.scss */
+/* line 286, ../sass/screen.scss */
 #rsvp .rsvp-form form {
   border: 1px solid #d93c37;
   padding: 20px;
 }
 @media screen and (min-width: 758px) {
-  /* line 270, ../sass/screen.scss */
+  /* line 286, ../sass/screen.scss */
   #rsvp .rsvp-form form {
     padding: 40px;
   }
 }
-/* line 279, ../sass/screen.scss */
+/* line 295, ../sass/screen.scss */
 #rsvp .rsvp-form .ss-form-question,
 #rsvp .rsvp-form .ss-q-title {
   margin-bottom: .75em;
 }
-/* line 284, ../sass/screen.scss */
+/* line 300, ../sass/screen.scss */
 #rsvp .rsvp-form input,
+#rsvp .rsvp-form textarea,
 #rsvp .rsvp-form select {
   font-size: 1.2em;
   padding: .2em;
@@ -765,12 +787,17 @@ h2 {
   border-radius: 4px;
   width: 100%;
 }
-/* line 293, ../sass/screen.scss */
+/* line 310, ../sass/screen.scss */
 #rsvp .rsvp-form input[type="text"],
+#rsvp .rsvp-form textarea,
 #rsvp .rsvp-form select {
   background-color: #f2f2f2;
 }
-/* line 298, ../sass/screen.scss */
+/* line 316, ../sass/screen.scss */
+#rsvp .rsvp-form textarea {
+  height: 3em;
+}
+/* line 320, ../sass/screen.scss */
 #rsvp .rsvp-form input[type="submit"] {
   background-color: #d93c37;
   padding: .7em 2em;
@@ -781,13 +808,13 @@ h2 {
   font-family: "Open Sans", sans-serif;
   width: 100%;
 }
-/* line 310, ../sass/screen.scss */
+/* line 332, ../sass/screen.scss */
 #rsvp iframe {
   border: 25px solid #9c8539;
   margin: 0 auto;
 }
 
-/* line 316, ../sass/screen.scss */
+/* line 338, ../sass/screen.scss */
 #accomodations {
   background: #634137;
   position: relative;
@@ -795,39 +822,39 @@ h2 {
   text-align: center;
   color: white;
 }
-/* line 323, ../sass/screen.scss */
+/* line 345, ../sass/screen.scss */
 #accomodations img {
   border: 10px solid white;
   margin-bottom: 1em;
 }
 
-/* line 329, ../sass/screen.scss */
+/* line 351, ../sass/screen.scss */
 #story {
   text-align: center;
   background: #56572d url("../images/jim_jamie_story_bg.jpg") no-repeat center -1px;
   background-size: 100% auto;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 329, ../sass/screen.scss */
+  /* line 351, ../sass/screen.scss */
   #story {
     background-size: 100% auto;
     background-image: url("../images/jim_jamie_story_bg@2x.jpg");
   }
 }
-/* line 341, ../sass/screen.scss */
+/* line 363, ../sass/screen.scss */
 #story .flourish {
   margin: 0 auto 40px;
 }
-/* line 345, ../sass/screen.scss */
+/* line 367, ../sass/screen.scss */
 #story h2 {
   color: #634137;
   margin-bottom: .25em;
 }
-/* line 350, ../sass/screen.scss */
+/* line 372, ../sass/screen.scss */
 #story p {
   text-align: left;
 }
-/* line 354, ../sass/screen.scss */
+/* line 376, ../sass/screen.scss */
 #story .storytext {
   -webkit-column-count: 2;
   -moz-column-count: 2;
@@ -836,41 +863,41 @@ h2 {
   column-count: 2;
 }
 
-/* line 360, ../sass/screen.scss */
+/* line 382, ../sass/screen.scss */
 #party {
   background: #d93c37;
   text-align: center;
   color: white;
 }
-/* line 365, ../sass/screen.scss */
+/* line 387, ../sass/screen.scss */
 #party h2 {
   color: white;
 }
-/* line 369, ../sass/screen.scss */
+/* line 391, ../sass/screen.scss */
 #party h3 {
   margin-top: 0;
   margin-bottom: 2em;
   font-weight: normal;
 }
-/* line 375, ../sass/screen.scss */
+/* line 397, ../sass/screen.scss */
 #party .span_2 img {
   border: 10px solid #fff;
   margin-bottom: 10px;
 }
 
-/* line 382, ../sass/screen.scss */
+/* line 404, ../sass/screen.scss */
 #directions {
   background: white;
   text-align: center;
 }
-/* line 386, ../sass/screen.scss */
+/* line 408, ../sass/screen.scss */
 #directions #map-holder {
   position: relative;
   width: 100%;
   padding-top: 62.5%;
   margin-bottom: 2em;
 }
-/* line 393, ../sass/screen.scss */
+/* line 415, ../sass/screen.scss */
 #directions #map-canvas {
   position: absolute;
   top: 0;
@@ -880,47 +907,47 @@ h2 {
   width: 100%;
   height: 100%;
 }
-/* line 403, ../sass/screen.scss */
+/* line 425, ../sass/screen.scss */
 #directions h2 {
   color: #d93c37;
   margin-bottom: .25em;
 }
-/* line 408, ../sass/screen.scss */
+/* line 430, ../sass/screen.scss */
 #directions .flourish {
   margin-bottom: 40px;
 }
-/* line 412, ../sass/screen.scss */
+/* line 434, ../sass/screen.scss */
 #directions p {
   text-align: left;
 }
 
-/* line 417, ../sass/screen.scss */
+/* line 439, ../sass/screen.scss */
 #registry {
   background: white;
   padding: 80px 0 0;
 }
-/* line 421, ../sass/screen.scss */
+/* line 443, ../sass/screen.scss */
 #registry h2 {
   margin: 0 0 .25em;
   color: #634137;
 }
-/* line 426, ../sass/screen.scss */
+/* line 448, ../sass/screen.scss */
 #registry p {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-weight: 300;
   margin-bottom: 2em;
 }
-/* line 433, ../sass/screen.scss */
+/* line 455, ../sass/screen.scss */
 #registry .flourish {
   margin: 20px 0 30px;
 }
-/* line 437, ../sass/screen.scss */
+/* line 459, ../sass/screen.scss */
 #registry .row {
   text-align: center;
   overflow: auto;
 }
-/* line 442, ../sass/screen.scss */
+/* line 464, ../sass/screen.scss */
 #registry #gifts {
   clear: both;
   padding-top: 30px;
